--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "googlebooks-app",
   "version": "1.0.0",
   "engines": {
-    "node": "6.11.1"
+    "node": "18.x",
+    "npm": "7.x"
   },
   "description": "",
   "main": "server/server.js",
