--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "googlebooks-app",
   "version": "1.0.0",
   "description": "",
-
+  "engines": {
+    "node": "16.x"
+  },
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +23,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.5",
+    "gh-pages": "^5.0.0",
     "save": "^2.9.0"
   }
 }
